bsd-platform-apps/bsd-platform-apps.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: apps
  # annotations:
  #   cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  # tls:
  #   - hosts:
  #       - apps.yourdomain.io
  #     secretName: apps-tls
  rules:
    - host: apps.yourdomain.co.uk
      http:
        paths:
          - path: /test-app
            pathType: Prefix
            backend:
              service:
                name: test-app
                port:
                  number: 5000
